objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Institution_CRM_System__c</fullName>
        <label>Institution CRM System</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRM (CPM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoldMine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesLogix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Perception_Use_of_Site_Data__c</fullName>
        <label>Institution Perception &amp;Use of Site Data</label>
        <picklist>
            <picklistValues>
                <fullName>Comfortable with Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncomfortable with Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question Validity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Reference_Status__c</fullName>
        <formula>Account_Name__r.Institution_Reference_Flag__c + &apos; &apos; +  Account_Name__r.Institution_Reference_Level__c</formula>
        <label>Institution Reference Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Date_Earliest__c</fullName>
        <formula>Earliest_Contract__r.Join_Date__c</formula>
        <inlineHelpText>Date that this institution first joined this membership.  Pulled from Join Date field on the Earliest Contract for this membership.</inlineHelpText>
        <label>Join Date-Earliest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Join_Date_Most_Recent__c</fullName>
        <description>Pulls the oldest Join Date of all active Contracts for this membership.</description>
        <inlineHelpText>Date that this institution last joined, or re-joined, this membership - whichever is a newer date.  Pulls the oldest date from the Join Date field on active contracts for this membership.</inlineHelpText>
        <label>Join Date-Most Recent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Case_Study__c</fullName>
        <label>Last Case Study</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Cohort_Summit_Attendance__c</fullName>
        <label>Last Cohort Summit Attendance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Executive_Sponsor_Update__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Last Executive Sponsor Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Onsite__c</fullName>
        <label>Last Onsite</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Refresh__c</fullName>
        <label>Last Opportunity Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_QA_Call_Date__c</fullName>
        <description>Display the date of the most recent Activity (Start Date - DESC) where Record Type=PT QA Call associated with the Primary Paid Membership. Where the membership program = &quot;HWCD - Clinical Documentation Improvement&quot;. Created for CR-20150909-9231.</description>
        <label>Last QA Call: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_QA_Call_Grade__c</fullName>
        <description>Display the value from the &quot;Grade&quot; field on the most recent Activity (Start Date - DESC) where Record Type=PT QA Call associated with the Primary Paid Membership. Where the membership program = &quot;HWCD - Clinical Documentation Improvement&quot;. Created for CR-20150909-9231.</description>
        <label>Last QA Call: Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_QA_Call_Would_Recommend__c</fullName>
        <description>Display the value from the &quot;Would Recommend&quot; field on the most recent Activity (Start Date - DESC) where Record Type=PT QA Call associated with the Primary Paid Membership. Where the membership program = &quot;HWCD - Clinical Documentation Improvement&quot;. Created for CR-20150909-9231.</description>
        <label>Last QA Call: Would Recommend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_QA_Call_Would_Renew__c</fullName>
        <description>Display the value from the &quot;Would Renew&quot; field on the most recent Activity (Start Date - DESC) where Record Type=PT QA Call associated with the Primary Paid Membership. Where the membership program = &quot;HWCD - Clinical Documentation Improvement&quot;. Created for CR-20150909-9231.</description>
        <label>Last QA Call: Would Renew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sponsor_Update__c</fullName>
        <label>Last Sponsor Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Value_Summit__c</fullName>
        <label>Last Value Summit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Memberships (Latest Contract)</relationshipLabel>
        <relationshipName>Memberships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_Onboarding_Planning_Projected__c</fullName>
        <label>Launch &amp; Onboarding Planning (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_and_Onboarding_Planning_Actual__c</fullName>
        <label>Launch and Onboarding Planning (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensed_Providers__c</fullName>
        <label>Licensed Providers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logins_Last_Month__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Logins Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_with_Close_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF( ISBLANK(Most_Recent_Lost_Opportunity_Close_Date__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Opportunity with Close Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFI_Delivery_Model__c</fullName>
        <label>MFI Delivery Model</label>
        <picklist>
            <picklistValues>
                <fullName>DSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Grade__c</fullName>
        <description>Created for CR-20151208-9445.</description>
        <label>MH Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Service_Gaps__c</fullName>
        <label>MH Service Gaps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Service_Success__c</fullName>
        <label>MH Service Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this member have Medicaid Maintenance with PIC?</description>
        <label>Medicaid Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicare_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this member have Medicare Maintenance with PIC?</description>
        <label>Medicare Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Registration_Comments__c</fullName>
        <inlineHelpText>Enter information that cannot be captured by the registration status (Ex. Date of last contact, person contacted, response, type pushback).</inlineHelpText>
        <label>Meeting Registration Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Series_Primary__c</fullName>
        <label>Meeting Series (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Intl BIEDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BIORI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BIQTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BISSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BSMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT PayNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT RCC/SPC/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT RIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CTAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI EEI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Series_Secondary__c</fullName>
        <label>Meeting Series (Secondary)</label>
        <picklist>
            <picklistValues>
                <fullName>Intl BIEDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BIORI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BIQTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BISSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl BSMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl CIHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT PayNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT RCC/SPC/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT RIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI CTAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI EEI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Status_Primary__c</fullName>
        <label>Meeting Status (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Status_Secondary__c</fullName>
        <label>Meeting Status (Secondary)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Updated_Date_Primary__c</fullName>
        <description>Populated via workflow &amp; field update.</description>
        <inlineHelpText>Automatically displays the date that the &quot;Primary Meeting Status&quot; field was last changed.</inlineHelpText>
        <label>Meeting Updated Date (Primary)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Updated_Date_Secondary__c</fullName>
        <description>Populated via workflow &amp; field update.</description>
        <inlineHelpText>Automatically displays the date that the &quot;Secondary Meeting Status&quot; field was last changed.</inlineHelpText>
        <label>Meeting Updated Date (Secondary)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Expectations_Grade__c</fullName>
        <label>Member Expectations Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Nuance__c</fullName>
        <label>Member Nuance</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Membership_Health_Index__c</fullName>
        <label>Membership Health Index</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Meeting_Util_last_12_Mo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Membership Meeting Util.- last 12 Mo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Status_Change_Date__c</fullName>
        <description>Field updated by workflow rule that shows the last date that the membership status was changed.  This is used in the Batch_MembershipSubscriptions batch job to ensure we cover all scenarios where a membership drops and subscriptions need updated.</description>
        <label>Membership Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Status_Text__c</fullName>
        <label>Membership Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Membership_Status_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Teleconf_Util_last_12_Mo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Membership Teleconf. Util.- last 12 Mo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Since_First_Start_Date__c</fullName>
        <formula>IF( ISBLANK( Start_Date_on_First_Contract__c ) , 0,  (TODAY() - Start_Date_on_First_Contract__c )/30.4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Today - first start date / 30.4, to return months since first start as an integer. Used for cyclical service reminders.</inlineHelpText>
        <label>Months Since First Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Lost_Opportunity_Close_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent Lost Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_NBB_Visit__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent NBB Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Opportunity_Close_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_QA_Call_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent QA Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_QA_Call_Grade__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent QA Call Grade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_QA_Call_Recommend_Grade__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent QA Call Recommend Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_QA_Call_Renew_Grade__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Most Recent QA Call Renew Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <formula>TEXT(Program__r.New_Business_Vertical__c)</formula>
        <label>New Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Decision_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Next Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Executive_Sponsor_Update__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Next Executive Sponsor Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_Start_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Next Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Onsite_Target__c</fullName>
        <label>Next Onsite (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Opportunity_Refresh_Target__c</fullName>
        <label>Next Opportunity Refresh (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Sponsor_Update_Target__c</fullName>
        <label>Next Sponsor Update (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Teleconf_Start_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Next Teleconf Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Teleconference_Date__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Next Teleconference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_QA_Call_in_Past_Year__c</fullName>
        <formula>if(
	OR(
		ISBLANK( Most_Recent_QA_Call_Date__c),
		if(Most_Recent_QA_Call_Date__c &lt; TODAY()-365, true, false )
	),
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No QA Call in Past Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Dedicated_Advisor__c</fullName>
        <label>Notes: Dedicated Advisor</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nursing_Masters_Member__c</fullName>
        <inlineHelpText>Indicate if Member is a Nursing Masters Member.</inlineHelpText>
        <label>Nursing Masters Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_in_Outreach__c</fullName>
        <label>Opportunity in Outreach?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_in_Prospect__c</fullName>
        <label>Opportunity in Prospect?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Plan_Development_Actual__c</fullName>
        <label>Outreach Plan Development (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Plan_Development_Projected__c</fullName>
        <label>Outreach Plan Development (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIC_User_ID__c</fullName>
        <description>This field indicates the User ID prefix necessary for internal users to login.</description>
        <label>PIC User ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Member_Health__c</fullName>
        <label>PT: Member Health</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Path_to_ROI_Grade__c</fullName>
        <label>Path to ROI Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(  ISBLANK(Account_Name__c), &quot;NA&quot;, (IF(Active_Contract_Idenfied__r.Payer_Account__c  =  Account_Name__r.Id  , &quot;Payer&quot;, &quot;Integrated&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Services__c</fullName>
        <description>Created for CR-20160609-9913.</description>
        <formula>Account_Name__r.Platinum_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the institution belongs to special territory (i.e. Platinum Services)</inlineHelpText>
        <label>Platinum Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool_Month_Pool_Year__c</fullName>
        <formula>TEXT( Active_Contract_Idenfied__r.Source_Opportunity__r.Pool_Month__c )&amp;&quot;-&quot; &amp;Active_Contract_Idenfied__r.Source_Opportunity__r.Pool_Year__c</formula>
        <label>Pool Month-Pool Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>